2014-10-24  Markus Trippelsdorf  <markus@trippelsdorf.de>

	PR bootstrap/63632
	* g++.dg/torture/pr63632.C: New test.

2014-10-23  Jonathan Wakely  <jwakely@redhat.com>

	PR c++/63619
	* g++.dg/warn/Wdelete-incomplete-3.C: New.
	* g++.dg/warn/Wdelete-incomplete-4.C: New.

2014-10-23  Evgeny Stupachenko  <evstupac@gmail.com>

	PR target/63618
	* gcc.target/i386/pr63618.c: New test.

2014-10-23  Marek Polacek  <polacek@redhat.com>

	PR c/63626
	* gcc.dg/pr63626.c: New test.

2014-10-23  Marek Polacek  <polacek@redhat.com>

	* c-c++-common/ubsan/undefined-2.c: New test.

2014-10-10  Kirill Yukhin  <kirill.yukhin@intel.com>

	* gcc.target/i386/pr63600.c: New.

2014-10-23  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gcc.dg/ipa/ipa-icf-21.c: Add -msse2 to dg-options.

2014-10-23  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gcc.dg/ipa/ipa-icf-21.c: Restrict to i?86-*-* x86_64-*-*.
	* gcc.dg/ipa/ipa-icf-28.c: Require init_priority.

2014-10-23  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gcc.target/sparc/20001013-1.c (main): Declare int return.
	* gcc.target/sparc/mnofpu.c (e1e_rphy): Declare.
	* gcc.target/sparc/sparc-ret.c (toto): Declare.
	* gcc.target/sparc/ultrasp6.c (__assert, HSRate): Declare.
	* gcc.target/sparc/ultrasp8.c (__malloc_lock, __malloc_unlock):
	Declare.

2014-10-22  Guozhi Wei  <carrot@google.com>

	PR tree-optimization/63530
	gcc.dg/vect/pr63530.c: New testcase.

2014-10-22  Richard Sandiford  <richard.sandiford@arm.com>

	* gcc.target/i386/conversion-2.c: New test.

2014-10-22  Jakub Jelinek  <jakub@redhat.com>
	    Yury Gribov  <y.gribov@samsung.com>

	* c-c++-common/ubsan/align-1.c: Update cmdline options.
	* c-c++-common/ubsan/align-3.c: Likewise.
	* c-c++-common/ubsan/bounds-1.c: Likewise.
	* c-c++-common/ubsan/div-by-zero-7.c: Likewise.
	* c-c++-common/ubsan/float-cast-overflow-10.c: Likewise.
	* c-c++-common/ubsan/float-cast-overflow-7.c: Likewise.
	* c-c++-common/ubsan/float-cast-overflow-8.c: Likewise.